@@ -44,6 +44,7 @@ pysnmp/v4/smi/mibs/SNMP-MPD-MIB.py
 pysnmp/v4/smi/mibs/SNMP-NOTIFICATION-MIB.py
 pysnmp/v4/smi/mibs/SNMP-TARGET-MIB.py
 pysnmp/v4/smi/mibs/SNMP-USER-BASED-SM-MIB.py
+pysnmp/v4/smi/mibs/SNMP-USM-AES-MIB.py
 pysnmp/v4/smi/mibs/SNMP-VIEW-BASED-ACM-MIB.py
 pysnmp/v4/smi/mibs/SNMPv2-CONF.py
 pysnmp/v4/smi/mibs/SNMPv2-MIB.py
@@ -123,6 +124,9 @@ pysnmp/v4/proto/secmod/rfc3414/priv/nopriv.py
 pysnmp/v4/proto/secmod/rfc3414/__init__.py
 pysnmp/v4/proto/secmod/rfc3414/localkey.py
 pysnmp/v4/proto/secmod/rfc3414/service.py
+pysnmp/v4/proto/secmod/rfc3826/priv/aes.py
+pysnmp/v4/proto/secmod/rfc3826/priv/__init__.py
+pysnmp/v4/proto/secmod/rfc3826/__init__.py
 pysnmp/v4/proto/secmod/__init__.py
 pysnmp/v4/proto/secmod/base.py
 pysnmp/v4/proto/secmod/rfc2576.py
