@@ -1463,7 +1463,8 @@ non-default hash function algorithm. Possible values include
 <P>
 Optional <STRONG>privProtocol</STRONG> parameter may be used to specify 
 non-default ciphering algorithm. Possible values include
-<STRONG>usmDESPrivProtocol</STRONG> and
+<STRONG>usmDESPrivProtocol</STRONG>,
+<STRONG>usmAesCfb128Protocol</STRONG>, and
 <STRONG>usmNoPrivProtocol</STRONG>.
 </P>
 </DD>
